# FlattenedNoTextureObjectFinder

./: .gitignore  README.md
catkin_ws/src/obj_reco_flattened/include/obj_reco_flattened/: ControlerFlattenedObjects.h
catkin_ws/src/obj_reco_flattened/src/: ControlerFlattenedObjects.cpp  ModelFlattenedObjects.cpp
catkin_ws/src/obj_reco_flattened_client/: CMakeLists.txt  package.xml
catkin_ws/src/obj_reco_flattened_client/src/: obj_reco_flattened_client_node.cpp
catkin_ws/src/obj_reco_flattened_trainer/: CMakeLists.txt  package.xml
catkin_ws/src/obj_reco_flattened_trainer/include/obj_reco_flattened_trainer/: SegmenterTrainer.h
catkin_ws/src/obj_reco_flattened_trainer/src/: obj_reco_flattened_trainer_node.cpp
catkin_ws/src/obj_reco_norgbd_notexture_trainer/: CMakeLists.txt  package.xml
catkin_ws/src/obj_reco_norgbd_notexture_trainer/src/: obj_reco_norgbd_notexture_trainer_node.cpp
catkin_ws/src/obj_reco_plastic_tray/src/: ControlerPlasticTrayFinder.cpp
catkin_ws/src/rgbd_camera_server/: CMakeLists.txt  package.xml
catkin_ws/src/rgbd_camera_server/src/: rgbd_camera_server_node.cpp
catkin_ws/src/vision/vision_msgs/: CMakeLists.txt
